--- a/.github/workflows/daily_sync.yml
+++ b/.github/workflows/daily_sync.yml
@@ -1,31 +1,46 @@
-steps:
-  - name: Checkout code
-    uses: actions/checkout@v3
+name: Sync X Posts
 
-  - name: Set up Python
-    uses: actions/setup-python@v4
-    with:
-      python-version: '3.9'
+on:
+  schedule:
+    # Runs at 00:00 UTC every day
+    - cron: '0 0 * * *'
+  workflow_dispatch: # Allows you to run it manually
 
-  - name: Install dependencies
-    run: pip install tweepy
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write # Needed to push changes back to the repo
 
-  - name: Run sync script
-    env:
-      TWITTER_BEARER_TOKEN: ${{ secrets.TWITTER_BEARER_TOKEN }}
-    run: python sync_tweets.py
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-  - name: Commit and push changes
-    run: |
-      git config --global user.name "github-actions[bot]"
-      git config --global user.email "github-actions[bot]@users.noreply.github.com"
-      
-      # Check if the file exists before trying to add it
-      if [ -f my_tweets.md ]; then
-        git add my_tweets.md
-        # Only commit if there are actually changes to prevent "nothing to commit" errors
-        git diff-index --quiet HEAD || git commit -m "Automated update: $(date)"
-        git push
-      else
-        echo "File my_tweets.md does not exist. Skipping commit."
-      fi
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.9'
+
+      - name: Install dependencies
+        run: |
+          pip install tweepy googlesearch-python
+
+      - name: Run sync script
+        env:
+          TWITTER_BEARER_TOKEN: ${{ secrets.TWITTER_BEARER_TOKEN }}
+        run: python sync_tweets.py
+
+      - name: Commit and push changes
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          
+          # Check if the file exists before trying to add it
+          if [ -f my_tweets.md ]; then
+            git add my_tweets.md
+            # Only commit if there are actually changes to prevent "nothing to commit" errors
+            # This prevents the workflow from failing if there's nothing new to push
+            git diff-index --quiet HEAD || (git commit -m "Automated update: $(date)" && git push)
+          else
+            echo "File my_tweets.md does not exist. Skipping commit."
+          fi
