--- a/.github/workflows/daily_sync.yml
+++ b/.github/workflows/daily_sync.yml
@@ -2,15 +2,14 @@ name: Sync X Posts
 
 on:
   schedule:
-    # Runs at 00:00 UTC every day
     - cron: '0 0 * * *'
-  workflow_dispatch: # Allows you to run it manually
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: write # Needed to push changes back to the repo
+      contents: write
 
     steps:
       - name: Checkout code
@@ -23,7 +22,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install tweepy googlesearch-python
+          pip install tweepy selenium webdriver-manager
 
       - name: Run sync script
         env:
@@ -34,13 +33,7 @@ jobs:
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          
-          # Check if the file exists before trying to add it
           if [ -f my_tweets.md ]; then
             git add my_tweets.md
-            # Only commit if there are actually changes to prevent "nothing to commit" errors
-            # This prevents the workflow from failing if there's nothing new to push
             git diff-index --quiet HEAD || (git commit -m "Automated update: $(date)" && git push)
-          else
-            echo "File my_tweets.md does not exist. Skipping commit."
           fi
