--- a/.github/workflows/daily_sync.yml
+++ b/.github/workflows/daily_sync.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install tweepy selenium webdriver-manager
+          pip install tweepy selenium webdriver-manager selenium-stealth
 
       - name: Run sync script
         env:
